feat: autenticacao no backend e frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.2.2",
+    "formik": "^2.2.9",
+    "react-router-dom": "^6.8.0",
+    "yup": "^0.32.11",
+    "@chakra-ui/react": "^2.4.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
