--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,20 @@
 {
+  "type": "module",
+  "scripts": {
+    "start": "nodemon server"
+  },
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1",
+    "validator": "^13.11.0"
   }
 }
