--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "validator": "^13.11.0"
