--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
